--- a/_quarto.yml
+++ b/_quarto.yml
@@ -31,7 +31,7 @@ format:
     respect-user-color-scheme: true
     theme: lightly
     toc-title: "Table of Contents"
-    css: styles.css
+    css: [styles.css, mobile.css]
     toc: true
     toc-depth: 3
     toc-expand: true
